# TothBot_V2-Code

./: .gitignore  README.md  conftest.py  pyproject.toml  pytest.ini  requirements.txt  tothbot.service  tothbot_service.txt
config/: .gitkeep
deploy/: .gitkeep
operations/: auto_strategy_search.py  dashboard.py  kraken_ws_probe.py  run_paper.sh  tothbot_sweep.sh
scripts/: .gitkeep  tb00774_realized_backtest.py  tb00775_regime_conditioned_v3.py  tb00775_stop_optimization.py  tb00775_stop_optimization_v2.py  tb00775_strategy_search.py  tb00777_structure_strategy.py  tb00778_walkforward.py  tb00779_exit_sweep.py  tb00780_structure_speed.py  tb00781_deep_history.py  tb00782_hybrid_stop.py  tb00783_adaptive_stop.py  tb00784_stopwidth_shorts.py  tb00785_meanrev_shorts.py  tb00786_stresstest.py  tb00794_perps_probe.py  tb00794_perps_verdict.txt  tb00798_perps_harden.py  tb00798_perps_harden_verdict.txt  tb00798b_cycle_phase.py  tb00798b_cycle_phase_verdict.txt  tb00801a_cycle_strategy.py  tb00801a_cycle_strategy_verdict.txt  tb00802a_stress_battery.py  tb00802a_stress_battery_verdict.txt  tb00803a_breaker_validation.py  tb00803a_breaker_validation_verdict.txt  tb00806_perp_account_sim.py  tb00806_perps_mechanics_synthesis.txt  tb00806a_twopool_hedge.py  tb00806a_twopool_hedge_verdict.txt  tb00806b_funding_stress.py  tb00806b_funding_stress_verdict.txt  tb00806c_liquidation_gaps.py  tb00806c_liquidation_gaps_verdict.txt  tb00806d_whole_organism.py  tb00806d_whole_organism_verdict.txt  tb00806e_hedge_breaker.py  tb00806e_hedge_breaker_verdict.txt  (+5 more)
tests/: __init__.py  (+94 more)
(+130 files in other folders)
